@@ -628,7 +628,7 @@ public class DFSClient implements FSConstants, java.io.Closeable {
     if(LOG.isDebugEnabled()) {
       LOG.debug(src + ": masked=" + masked);
     }
-    OutputStream result = new DFSOutputStream(this, src, masked,
+    final DFSOutputStream result = new DFSOutputStream(this, src, masked,
         flag, createParent, replication, blockSize, progress, buffersize,
         conf.getInt(DFSConfigKeys.DFS_BYTES_PER_CHECKSUM_KEY, 
                     DFSConfigKeys.DFS_BYTES_PER_CHECKSUM_DEFAULT));
@@ -639,7 +639,7 @@ public class DFSClient implements FSConstants, java.io.Closeable {
   /**
    * Append to an existing file if {@link CreateFlag#APPEND} is present
    */
-  private OutputStream primitiveAppend(String src, EnumSet<CreateFlag> flag,
+  private DFSOutputStream primitiveAppend(String src, EnumSet<CreateFlag> flag,
       int buffersize, Progressable progress) throws IOException {
     if (flag.contains(CreateFlag.APPEND)) {
       HdfsFileStatus stat = getFileInfo(src);
@@ -673,7 +673,7 @@ public class DFSClient implements FSConstants, java.io.Closeable {
       throws IOException, UnresolvedLinkException {
     checkOpen();
     CreateFlag.validate(flag);
-    OutputStream result = primitiveAppend(src, flag, buffersize, progress);
+    DFSOutputStream result = primitiveAppend(src, flag, buffersize, progress);
     if (result == null) {
       result = new DFSOutputStream(this, src, absPermission,
           flag, createParent, replication, blockSize, progress, buffersize,
@@ -721,7 +721,7 @@ public class DFSClient implements FSConstants, java.io.Closeable {
   }
 
   /** Method to get stream returned by append call */
-  private OutputStream callAppend(HdfsFileStatus stat, String src,
+  private DFSOutputStream callAppend(HdfsFileStatus stat, String src,
       int buffersize, Progressable progress) throws IOException {
     LocatedBlock lastBlock = null;
     try {
@@ -749,11 +749,11 @@ public class DFSClient implements FSConstants, java.io.Closeable {
    * 
    * @see ClientProtocol#append(String, String) 
    */
-  OutputStream append(String src, int buffersize, Progressable progress)
+  DFSOutputStream append(String src, int buffersize, Progressable progress) 
       throws IOException {
     checkOpen();
     HdfsFileStatus stat = getFileInfo(src);
-    OutputStream result = callAppend(stat, src, buffersize, progress);
+    final DFSOutputStream result = callAppend(stat, src, buffersize, progress);
     leaserenewer.put(src, result);
     return result;
   }
