@@ -377,6 +377,9 @@ Trunk (unreleased changes)
     include and exclude lists, on web and JMX interfaces.
     (Tanping Wang via szetszwo)
 
+    HDFS-1890. Improve the name, class and value type of the map
+    LeaseRenewer.pendingCreates.  (szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
